website/websites/u64q/code/fastaredux.1.shedskin.log

Tue, 24 Feb 2015 12:52:10 GMT

MAKE:
make[1]: Vstupuje se do adresáře „/home/dundee/workspace/benchmarksgame/bencher/tmp/fastaredux/tmp“
cp fastaredux.shedskin shed.py
shedskin shed.py
*** SHED SKIN Python-to-C++ Compiler 0.9.4 ***
Copyright 2005-2011 Mark Dufour; License GNU GPL version 3 (See LICENSE)

[analyzing types..]
0% ********************************100% ********************************100% ********************************100%
[generating c++ code..]
*WARNING* shed.py:62: non-constant or unsupported type code
*WARNING* shed.py:71: unresolved call to 'sow'
*WARNING* shed.py:73: unresolved call to 'sow'
*WARNING* shed.py:86: unresolved call to 'sow'
*WARNING* shed.py:91: unresolved call to 'sow'
[elapsed time: 2.53 seconds]
make
make[2]: Vstupuje se do adresáře „/home/dundee/workspace/benchmarksgame/bencher/tmp/fastaredux/tmp“
g++  -O2 -march=native -Wno-deprecated  -I. -I/usr/lib/python2.7/site-packages/shedskin/lib /home/dundee/workspace/benchmarksgame/bencher/tmp/fastaredux/tmp/shed.cpp /usr/lib/python2.7/site-packages/shedskin/lib/sys.cpp /usr/lib/python2.7/site-packages/shedskin/lib/re.cpp /usr/lib/python2.7/site-packages/shedskin/lib/builtin.cpp /usr/lib/python2.7/site-packages/shedskin/lib/bisect.cpp /usr/lib/python2.7/site-packages/shedskin/lib/array.cpp -lgc -lpcre  -o shed
/home/dundee/workspace/benchmarksgame/bencher/tmp/fastaredux/tmp/shed.cpp: In function ‘__array__::array<void*>* __shed__::makeLookupTable(__shedskin__::list<__shedskin__::tuple2<__shedskin__::str*, double>*>*)’:
/home/dundee/workspace/benchmarksgame/bencher/tmp/fastaredux/tmp/shed.cpp:119:8: error: no matches converting function ‘bisect’ to type ‘__shed__::lambda0 {aka int (*)(class __shedskin__::list<double>*, double)}’
     bb = __bisect__::bisect;
        ^
In file included from /home/dundee/workspace/benchmarksgame/bencher/tmp/fastaredux/tmp/shed.cpp:3:0:
/usr/lib/python2.7/site-packages/shedskin/lib/bisect.hpp:99:29: note: candidates are: template<class A> __shedskin__::__ss_int __bisect__::bisect(__shedskin__::list<T>*, A, __shedskin__::__ss_int)
 template <class A> __ss_int bisect(list<A> *a, A x, __ss_int lo=0) {
                             ^
/usr/lib/python2.7/site-packages/shedskin/lib/bisect.hpp:55:29: note:                 template<class A> __shedskin__::__ss_int __bisect__::bisect(__shedskin__::list<T>*, A, __shedskin__::__ss_int, __shedskin__::__ss_int)
 template <class A> __ss_int bisect(list<A> *a, A x, __ss_int lo, __ss_int hi) {
                             ^
/home/dundee/workspace/benchmarksgame/bencher/tmp/fastaredux/tmp/shed.cpp: In function ‘void* __shed__::repeatFasta(__shedskin__::str*, __shedskin__::__ss_int)’:
/home/dundee/workspace/benchmarksgame/bencher/tmp/fastaredux/tmp/shed.cpp:135:9: error: cannot convert ‘__shedskin__::file::write’ from type ‘void* (__shedskin__::file::)(__shedskin__::str*)’ to type ‘void*’
     sow = (__sys__::__ss_stdout)->write;
         ^
/home/dundee/workspace/benchmarksgame/bencher/tmp/fastaredux/tmp/shed.cpp: In function ‘void* __shed__::randomFasta(__shedskin__::list<__shedskin__::tuple2<__shedskin__::str*, double>*>*, __shedskin__::__ss_int)’:
/home/dundee/workspace/benchmarksgame/bencher/tmp/fastaredux/tmp/shed.cpp:157:9: error: cannot convert ‘__shedskin__::file::write’ from type ‘void* (__shedskin__::file::)(__shedskin__::str*)’ to type ‘void*’
     sow = (__sys__::__ss_stdout)->write;
         ^
In file included from /usr/lib/python2.7/site-packages/shedskin/lib/builtin.hpp:1209:0,
                 from /home/dundee/workspace/benchmarksgame/bencher/tmp/fastaredux/tmp/shed.cpp:1:
/usr/lib/python2.7/site-packages/shedskin/lib/builtin/str.hpp: In instantiation of ‘__shedskin__::str* __shedskin__::str::join(U*) [with U = __shed__::list_comp_1]’:
/home/dundee/workspace/benchmarksgame/bencher/tmp/fastaredux/tmp/shed.cpp:154:49:   required from here
/usr/lib/python2.7/site-packages/shedskin/lib/builtin/str.hpp:36:9: error: invalid conversion from ‘__shedskin__::pyiter<void*>::for_in_unit {aka void*}’ to ‘std::vector<__shedskin__::str*, gc_allocator<__shedskin__::str*> >::value_type {aka __shedskin__::str*}’ [-fpermissive]
         __join_cache->units.push_back(e);
         ^
In file included from /usr/include/c++/4.9.2/vector:64:0,
                 from /usr/lib/python2.7/site-packages/shedskin/lib/builtin.hpp:13,
                 from /home/dundee/workspace/benchmarksgame/bencher/tmp/fastaredux/tmp/shed.cpp:1:
/usr/include/c++/4.9.2/bits/stl_vector.h:913:7: note: initializing argument 1 of ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = __shedskin__::str*; _Alloc = gc_allocator<__shedskin__::str*>; std::vector<_Tp, _Alloc>::value_type = __shedskin__::str*]’
       push_back(const value_type& __x)
       ^
In file included from /usr/lib/python2.7/site-packages/shedskin/lib/builtin.hpp:1209:0,
                 from /home/dundee/workspace/benchmarksgame/bencher/tmp/fastaredux/tmp/shed.cpp:1:
/usr/lib/python2.7/site-packages/shedskin/lib/builtin/str.hpp:37:14: error: ‘__shedskin__::pyiter<void*>::for_in_unit {aka void*}’ is not a pointer-to-object type
         sz = e->unit.size();
              ^
In file included from /home/dundee/workspace/benchmarksgame/bencher/tmp/fastaredux/tmp/shed.cpp:4:0:
/usr/lib/python2.7/site-packages/shedskin/lib/array.hpp: In instantiation of ‘void __array__::array<T>::fillbuf(T) [with T = void*]’:
/usr/lib/python2.7/site-packages/shedskin/lib/array.hpp:291:14:   required from ‘void* __array__::array<T>::append(T) [with T = void*]’
/usr/lib/python2.7/site-packages/shedskin/lib/array.hpp:109:13:   required from ‘void* __array__::array<T>::extend(U*) [with U = __shedskin__::list<__shedskin__::str*>; T = void*]’
/usr/lib/python2.7/site-packages/shedskin/lib/array.hpp:92:5:   required from ‘void* __array__::array<T>::__init__(__shedskin__::str*, U*) [with U = __shedskin__::list<__shedskin__::str*>; T = void*]’
/usr/lib/python2.7/site-packages/shedskin/lib/array.hpp:34:32:   required from ‘__array__::array<T>::array(__shedskin__::str*, U*) [with U = __shedskin__::list<__shedskin__::str*>; T = void*]’
/home/dundee/workspace/benchmarksgame/bencher/tmp/fastaredux/tmp/shed.cpp:124:85:   required from here
/usr/lib/python2.7/site-packages/shedskin/lib/array.hpp:247:43: error: invalid conversion from ‘void*’ to ‘signed char’ [-fpermissive]
         case 'b': *((signed char *)buffy) = t; break;
                                           ^
/usr/lib/python2.7/site-packages/shedskin/lib/array.hpp:248:45: error: invalid conversion from ‘void*’ to ‘unsigned char’ [-fpermissive]
         case 'B': *((unsigned char *)buffy) = t; break;
                                             ^
/usr/lib/python2.7/site-packages/shedskin/lib/array.hpp:249:44: error: invalid conversion from ‘void*’ to ‘short int’ [-fpermissive]
         case 'h': *((signed short *)buffy) = t; break;
                                            ^
/usr/lib/python2.7/site-packages/shedskin/lib/array.hpp:250:46: error: invalid conversion from ‘void*’ to ‘short unsigned int’ [-fpermissive]
         case 'H': *((unsigned short *)buffy) = t; break;
                                              ^
/usr/lib/python2.7/site-packages/shedskin/lib/array.hpp:251:42: error: invalid conversion from ‘void*’ to ‘int’ [-fpermissive]
         case 'i': *((signed int *)buffy) = t; break;
                                          ^
/usr/lib/python2.7/site-packages/shedskin/lib/array.hpp:252:44: error: invalid conversion from ‘void*’ to ‘unsigned int’ [-fpermissive]
         case 'I': *((unsigned int *)buffy) = t; break;
                                            ^
/usr/lib/python2.7/site-packages/shedskin/lib/array.hpp:253:43: error: invalid conversion from ‘void*’ to ‘long int’ [-fpermissive]
         case 'l': *((signed long *)buffy) = t; break;
                                           ^
/usr/lib/python2.7/site-packages/shedskin/lib/array.hpp:254:45: error: invalid conversion from ‘void*’ to ‘long unsigned int’ [-fpermissive]
         case 'L': *((unsigned long *)buffy) = t; break;
                                             ^
/usr/lib/python2.7/site-packages/shedskin/lib/array.hpp:255:37: error: cannot convert ‘void*’ to ‘float’ in assignment
         case 'f': *((float *)buffy) = t; break;
                                     ^
/usr/lib/python2.7/site-packages/shedskin/lib/array.hpp:256:38: error: cannot convert ‘void*’ to ‘double’ in assignment
         case 'd': *((double *)buffy) = t; break;
                                      ^
Makefile:23: návod pro cíl „shed“ selhal
make[2]: *** [shed] Chyba 1
make[2]: Opouští se adresář „/home/dundee/workspace/benchmarksgame/bencher/tmp/fastaredux/tmp“
/home/dundee/workspace/benchmarksgame/bencher/makefiles/my.linux.Makefile:28: návod pro cíl „fastaredux.shedskin_run“ selhal
make[1]: *** [fastaredux.shedskin_run] Chyba 2
make[1]: Opouští se adresář „/home/dundee/workspace/benchmarksgame/bencher/tmp/fastaredux/tmp“
10.95s to complete and log all make actions

COMMAND LINE:
./shed 25000

MAKE ERROR 

